--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -348,12 +348,16 @@ header {
   background: #C3C3C3;
 }
 
-.bar-show h1 {
+.bar-show > h1 {
   font-size: 64px;
+  height: 94px;
+  overflow: hidden;
 }
 
 .bar-show h2 {
-  font-size: 44px
+  font-size: 44px;
+  height: 66px;
+  overflow: hidden;
 }
 
 .bar-show h3 {
@@ -362,4 +366,83 @@ header {
 
 .bar-show li {
   font-size: 26px;
+}
+
+.card-container {
+  // background: red;
+  height: 285px;
+  width: 100%;
+  position: absolute;
+  overflow: hidden;
+}
+
+.cards {
+  position: relative;
+  left: 0px;
+  transition: left 1s;
+
+  /* set height to be the same as carousel */
+  height: 100%;
+  width: 1050px;
+  background: blue;
+}
+
+.loyalty-card {
+  position: relative;
+  background: #333;
+  height: 275px;
+  width: 200px;
+  margin: 5px;
+  float: left;
+  border-radius: 2px;
+  color: #c3c3c3;
+}
+
+.loyalty-card img {
+  width: 72px;
+  float: left;
+}
+
+.loyalty-card h1 {
+  float: left;
+  font-size: 24px;
+  width: 128px;
+  height: 72px;
+  margin: 0;
+  overflow: hidden;
+}
+
+.affiliation, .hc_verified, .loyalty-card h3 {
+  clear: both;
+  height: 24px;
+  font-size: 18px;
+}
+
+.left {
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 4;
+  border:  15px solid transparent;
+  border-right: 15px solid white;
+
+  position: absolute;
+}
+
+.right {
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  z-index: 4;
+  border:  15px solid transparent;
+  border-left: 15px solid white;  position: absolute;
+}
+
+.left:hover {
+  border:  15px solid transparent;
+  border-right: 15px solid red;
+}
+
+.right:hover {
+  border:  15px solid transparent;
+  border-left: 15px solid red;
 }
