add hover bounce for map

--- a/app/assets/templates/bars/show.jst.ejs
+++ b/app/assets/templates/bars/show.jst.ejs
@@ -22,7 +22,7 @@
           </section>
           <section class='hc_verified'>
             <% if (team.hc_verified) { %>
-              Verified!
+              <i class="fa fa-trophy"></i>
             <% } %>
           </section>
           <h3>
