--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -208,12 +208,40 @@ header {
   width: 25px;
 }
 
-.address, .number {
+.address, .number, .more-info {
   clear: both;
-  width: 100%;
   height: 19px;
   overflow: hidden;
   padding-bottom: 1px
+}
+
+.address {
+  width: 100%;
+}
+
+.number {
+  float: left;
+  width: calc(100%);
+}
+
+.more-info {
+  padding-right: 1px;
+  display: none;
+  width: 14px;
+}
+
+.active .more-info {
+  display: inline;
+  height: 19px;
+
+}
+
+.active .number {
+  width: calc(100% - 15px);
+}
+
+.more-info:hover {
+  color: #4298B5;
 }
 
 .b10_logos, .NFL_logos, .sec_logos, .MLB_logos {
