Add bar show page ith map flip animation

--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -173,7 +173,17 @@
     </section>
   </div>
 </div>
-<div id="map-canvas" class="hide-map"></div>
-<input id="pac-input" class="controls" type="text" placeholder="Set Your Area">
+<div class="map-details-container hide-map">
+  <section class=map-details>
+    <div class="map-container">
+      <div id="map-canvas"></div>
+      <input id="pac-input" class="controls" type="text" placeholder="Set Your Area">
+    </div>
+    <div class="details-container">
+    </div>
+
+  </section>
+
+</div>
 
 <!-- <button type="button" id="removeMarkers">Remove Markers</button> -->
