--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -140,6 +140,53 @@ header {
 }
 
 #map-canvas {
+  position: absolute;
+  height: 500px;
+  width: 100%;
+  margin: auto;
+  float: left;
+  z-index: 1;
+  // left: 1%;
+  // transition: left 1s;
+  // border-radius: 5px;
+}
+
+.map-details {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+
+.map-details.flipped {
+  transform: rotateY( 180deg );
+}
+
+
+.details-container {
+  z-index: 10;
+  transform: rotateY( 180deg );
+}
+
+.flipped .map-container {
+  height: 0px;
+  overflow: hidden;
+  transition: height .1s;
+  transition-delay: 1s;
+}
+
+.map-container, .details-container {
+  margin: 0;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.map-details-container {
+  background: #E9E0D6;
   position: relative;
   height: 500px;
   width: 68%;
@@ -148,6 +195,7 @@ header {
   left: 1%;
   transition: left 1s;
   border-radius: 5px;
+  perspective: 800px;
 }
 
 .hide-map {
@@ -208,7 +256,7 @@ header {
   width: 25px;
 }
 
-.address, .number, .more-info {
+.address, .number {
   clear: both;
   height: 19px;
   overflow: hidden;
@@ -226,12 +274,12 @@ header {
 
 .more-info {
   padding-right: 1px;
-  display: none;
+  display: none !important;
   width: 14px;
 }
 
 .active .more-info {
-  display: inline;
+  display: inline !important;
   height: 19px;
 
 }
@@ -367,11 +415,11 @@ header {
   font-family: 'Oswald', sans-serif;
   position: relative;
   height: 500px;
-  width: 68%;
+  width: 100%;
   margin: auto;
   float: left;
-  left: 1%;
-  transition: left 1s;
+  // left: 1%;
+  // transition: left 1s;
   border-radius: 5px;
   background: #C3C3C3;
 }
