--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -171,6 +171,12 @@
         Alumni Official
       </p>
     </section>
+    <section>
+      <i class="fa fa-users"></i>
+      <p>
+        Group Official
+      </p>
+    </section>
   </div>
 </div>
 <div class="map-details-container hide-map">
