--- a/app/assets/templates/bars/show.jst.ejs
+++ b/app/assets/templates/bars/show.jst.ejs
@@ -32,6 +32,9 @@
           <h3>
           Specials
           </h3>
+          <p class='specials'>
+            <%= team.specials %>
+          </p>
         </div>
       <%  })%>
     <% } %>
