Add Add Bar to header

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,6 +93,11 @@ header {
   z-index: 5;
 }
 
+#left-links {
+  float: left;
+  color: #C3C3C3;
+}
+
 .nav-ul li {
   position: relative;
   float: left;
