--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,4 +1,7 @@
 <header class="group">
+  <ul id="left-links">
+    <li>Add Bar</li>
+  </ul>
   <nav class="group">
     <ul class="nav-ul group">
       <li>
