--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,6 +1,6 @@
 <header class="group">
   <ul id="left-links">
-    <li>Add Bar</li>
+    <li id="newLoyalty">Add A Loyalty</li>
   </ul>
   <nav class="group">
     <ul class="nav-ul group">
@@ -192,5 +192,9 @@
     </div>
 
   </section>
+
+</div>
+
+<div id="loyaltyForm" class="hideForm">
 
 </div>
