--- a/app/assets/templates/loyalties/form.jst.ejs
+++ b/app/assets/templates/loyalties/form.jst.ejs
@@ -1,6 +1,6 @@
+Add A New Loyalty!
 <form>
-  <label for="barName">Bar Name</label>
-  <input type="text" name="barName" value="">
+  <input id="autocomp" type="text" placeholder="Enter a location">
 
   <label for="loyalty">Team Loyalty</label>
   <select name="team">
@@ -53,6 +53,7 @@
     </optgroup>
   </select>
 </form>
+
 <!--
 Team.create({:name=>"Arizona Cardinals", :icon_url=>"http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/ari.png&transparent=true", :league=>"NFL"})
 Team.create({:name=>"Atlanta Falcons", :icon_url=>"http://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/atl.png&transparent=true", :league=>"NFL"})
