--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,6 +1,8 @@
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyB7LXJbHj9QusVKsscsSQIUQNYLip0M7Jk"></script>
 <section id="main">
 
 </section>
+</head>
 <script type="text/javascript">
   HomeCrowd.initialize();
 </script>
