remove team list

--- a/app/assets/templates/loyalties/form.jst.ejs
+++ b/app/assets/templates/loyalties/form.jst.ejs
@@ -1,8 +1,9 @@
-Add A New Loyalty!
+Find Your Bar!
+<br>
 <form>
   <input id="autocomp" type="text" placeholder="Enter a location">
 
-  <label for="loyalty">Team Loyalty</label>
+  <!-- <label for="loyalty">Team Loyalty</label>
   <select name="team">
     <optgroup label="Big Ten">
       <option value="1">Michigan State University</option>
@@ -52,6 +53,7 @@ Add A New Loyalty!
       <option value="43">Washington Nationals</option>
     </optgroup>
   </select>
+  <input type="submit" value="SUBMIT"> -->
 </form>
 
 <!--
