--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -491,6 +491,17 @@ header {
   transition: background .5s;
 }
 
+.card-form {
+  position: relative;
+  background: #333;
+  height: 275px;
+  width: 200px;
+  margin: 5px;
+  float: left;
+  border-radius: 2px;
+  color: #c3c3c3;
+}
+
 .loyalty-card img {
   width: 72px;
   float: left;
@@ -555,7 +566,7 @@ header {
   transform: translateY(-50%);
 }
 
-#loyaltyForm {
+#barForm {
   position: fixed;
   color: black;
 }
