--- a/app/assets/templates/loyalties/form.jst.ejs
+++ b/app/assets/templates/loyalties/form.jst.ejs
@@ -1,9 +1,8 @@
-Find Your Bar!
+Add Your Team!
 <br>
-<form>
-  <input id="autocomp" type="text" placeholder="Enter a location">
+<form class="" action="index.html" method="post">
+  <label for="loyalty">Team Loyalty</label>
 
-  <!-- <label for="loyalty">Team Loyalty</label>
   <select name="team">
     <optgroup label="Big Ten">
       <option value="1">Michigan State University</option>
@@ -28,7 +27,7 @@ Find Your Bar!
       <option value="18">Boston Red Sox</option>
       <option value="19">Chicago Cubs</option>
       <option value="20">Chicago White Sox</option>
-      <option value="22">Cinncinnati Reds</option>
+      <option value="21">Cinncinnati Reds</option>
       <option value="22">Cleveland Indians</option>
       <option value="23">Colorado Rockies</option>
       <option value="24">Houston Astros</option>
@@ -53,7 +52,7 @@ Find Your Bar!
       <option value="43">Washington Nationals</option>
     </optgroup>
   </select>
-  <input type="submit" value="SUBMIT"> -->
+  <input type="submit" value="SUBMIT">
 </form>
 
 <!--
