Working loyalty add

--- a/app/assets/templates/loyalties/form.jst.ejs
+++ b/app/assets/templates/loyalties/form.jst.ejs
@@ -3,7 +3,7 @@ Add Your Team!
 <form class="" action="index.html" method="post">
   <label for="loyalty">Team Loyalty</label>
 
-  <select name="team">
+  <select name="loyalty[team_id]">
     <optgroup label="Big Ten">
       <option value="1">Michigan State University</option>
       <option value="2">Northwestern University</option>
