--- a/app/assets/templates/loyalties/form.jst.ejs
+++ b/app/assets/templates/loyalties/form.jst.ejs
@@ -30,26 +30,27 @@ Add Your Team!
       <option value="21">Cinncinnati Reds</option>
       <option value="22">Cleveland Indians</option>
       <option value="23">Colorado Rockies</option>
-      <option value="24">Houston Astros</option>
-      <option value="25">Kansas City Royals</option>
-      <option value="26">Los Angeles Angels</option>
-      <option value="27">Los Angeles Dodgers</option>
-      <option value="28">Miami Marlins</option>
-      <option value="29">Milwaukee Brewers</option>
-      <option value="30">Minnesota Twins</option>
-      <option value="31">New York Mets</option>
-      <option value="32">New York Yankees</option>
-      <option value="33">Oakland Athletics</option>
-      <option value="34">Philadelphia Phillies</option>
-      <option value="35">Pittsburgh Pirates</option>
-      <option value="36">San Diego Padres</option>
-      <option value="37">San Francisco Giants</option>
-      <option value="38">Seattle Mariners</option>
-      <option value="39">St. Louis Cardinals</option>
-      <option value="40">Tampa Bay Rays</option>
-      <option value="41">Texas Rangers</option>
-      <option value="42">Toronto Blue Jays</option>
-      <option value="43">Washington Nationals</option>
+      <option value="24">Detroit Tigers</option>
+      <option value="25">Houston Astros</option>
+      <option value="26">Kansas City Royals</option>
+      <option value="27">Los Angeles Angels</option>
+      <option value="28">Los Angeles Dodgers</option>
+      <option value="29">Miami Marlins</option>
+      <option value="30">Milwaukee Brewers</option>
+      <option value="31">Minnesota Twins</option>
+      <option value="32">New York Mets</option>
+      <option value="33">New York Yankees</option>
+      <option value="34">Oakland Athletics</option>
+      <option value="35">Philadelphia Phillies</option>
+      <option value="36">Pittsburgh Pirates</option>
+      <option value="37">San Diego Padres</option>
+      <option value="38">San Francisco Giants</option>
+      <option value="39">Seattle Mariners</option>
+      <option value="40">St. Louis Cardinals</option>
+      <option value="41">Tampa Bay Rays</option>
+      <option value="42">Texas Rangers</option>
+      <option value="43">Toronto Blue Jays</option>
+      <option value="44">Washington Nationals</option>
     </optgroup>
   </select>
   <input type="submit" value="SUBMIT">
