Update dropdown menu

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 
 html, body, h1, h2, h3, nav, a, section,
 header, ul, li,i, img, p, input, button, main,
-form {
+select, form {
  margin: 0;
  padding: 0;
  border: 0;
