--- a/app/assets/templates/home/show.jst.ejs
+++ b/app/assets/templates/home/show.jst.ejs
@@ -1,6 +1,8 @@
 <header class="group">
   <ul id="left-links">
-    <li id="newLoyalty">Add A Loyalty</li>
+    <li id="newLoyalty">
+      <input id="autocomp" type="text" placeholder="Search for a Bar">
+    </li>
   </ul>
   <nav class="group">
     <ul class="nav-ul group">
@@ -192,9 +194,5 @@
     </div>
 
   </section>
-
-</div>
-
-<div id="barForm" class="hideForm">
 
 </div>
