Search renders New Bar as needed

--- a/app/assets/templates/bars/form.jst.ejs
+++ b/app/assets/templates/bars/form.jst.ejs
@@ -1,1 +1,9 @@
-<input id="autocomp" type="text" placeholder="Enter a location">
+<h3>Does This Bar Have Loyalties?</h3>
+<h1> <%= bar.escape('name') %>  </h1>
+<h2> <%= bar.escape('address') %>  </h2>
+<h2> <%= bar.escape('phone') %> </h2>
+
+<h3>Choose One and Add It To HomeCrowd</h3>
+
+<button type="button" name="button">Add Bar</button>
+<button id="close" type="button" name="button">Close</button>
