--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -566,6 +566,32 @@ header {
   transform: translateY(-50%);
 }
 
+#addBar {
+  position: fixed;
+  z-index: 4;
+  background-color: #254458;
+  color: #E9E0D6;
+  border: 2px solid #E9E0D6;
+  border-radius: 5px;
+  padding: 5px;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  text-align: center;
+}
+
+#addBar h1 {
+  font-size: 42px;
+}
+
+#addBar h2 {
+  font-size: 32px;
+}
+
+#addBar h3 {
+  font-size: 24px;
+}
+
 .hideForm {
   display: none;
 }
